Fix problem with jump-to-def and scroll positions

--- a/doc/docs.css
+++ b/doc/docs.css
@@ -91,7 +91,7 @@ button {
 ul.tabs {
   list-style: none;
   margin: 0 0 -1px 0;
-  padding: 0 0 0 10px;
+  padding: 0 0 0 37px;
   overflow: hidden;
 }
 ul.tabs li {
@@ -100,7 +100,7 @@ ul.tabs li {
   color: #777;
   cursor: pointer;
   margin: 0 2px 0 0;
-  padding: 1px 10px 4px;
+  padding: 2px 10px 5px;
   border: 1px solid silver;
   border-bottom-width: 0px;
   background: #f3f3f3;
